Tried deploying a Kinto app

--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ LEDGER_ADMIN=""
 KINTO_WALLET_FACTORY=""
 HARDWARE_WALLET_TYPE="0"
 
-KINTO_RPC_URL="https://kinto-mainnet.calderachain.xyz/http"
+KINTO_RPC_URL="https://rpc.kinto-rpc.com"
 ETHEREUM_RPC_URL=""
 OPTIMISM_RPC_URL=""
 BASE_RPC_URL=""
